--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image
+name: Build, Test, and Push Docker Image
 
 on:
   push:
@@ -16,6 +16,19 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - name: Run tests
+      run: pytest
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
@@ -26,6 +39,7 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build and push Docker image
+      if: success()
       uses: docker/build-push-action@v3
       with:
         context: .
@@ -33,4 +47,5 @@ jobs:
         tags: thejordanprice/icanhazip-clone:latest
 
     - name: Log out from Docker Hub
+      if: success()
       run: docker logout
